# jetson_codebase

./: .gitignore  CMakeLists.txt  CMakePresets.json  EKF_INTEGRATION.md  Folder Structure  QUICK_TEST_GUIDE.md  README_EKF.md  ROBOT_EKF_TESTING.md  TELEMETRY_UPDATE.md  WINDOWS_TEST_COMMANDS.md  build_run.sh  execute  listener.py  readme.md  robot_pose_20250710_002441.csv  robot_pose_20250710_081923.csv  robot_pose_20250710_083451.csv  robot_pose_20250710_084120.csv  robot_pose_20250710_084326.csv  run.sh  serial_to_udp_forwarder.py  test_ekf.sh  test_robot_ekf.sh  usb.sh
Path-Planning-using-Graph-based-Planning-Algorithms/: main.py
SimpleSLAM/: CMakeLists.txt  Pose.txt  convertcsvintotxt.py  map_system_0.pgm  map_system_1.pgm  map_system_2.pgm  map_system_3.pgm
SimpleSLAM/include/: OccupancyMap.h  ScanMatcher.h  SimpleSLAM.h
SimpleSLAM/src/: OccupancyMap.cpp  ScanMatcher.cpp  SimpleSLAM.cpp  main.cpp
dummy/: main.cpp
include/: SensorFusion.hpp  config.hpp  ekf.hpp  kalman_filter.hpp  lidar_handler.hpp  occupancy_grid.hpp  serial_com.hpp  serial_parser.hpp  udp_com.hpp  utils.hpp
include/communication/: serial_com.hpp  udp_com.hpp
include/core/: config.hpp
include/include/: udp_receiver.hpp
include/lidar/: LakiBeamUDP.h  lidar_handler.hpp
include/localization/: RobotLocalization.hpp  SensorFusion.hpp  pose_localiser.hpp  robot_utils.hpp
include/mapping/: mapping.cpp  occupancy_grid.hpp
outputs/: lidar_4158613362.csv  lidar_4158630112.csv  lidar_4158630213.csv  lidar_4158630313.csv  lidar_4158630414.csv  lidar_4158630514.csv  lidar_4158630615.csv  lidar_4158630716.csv  lidar_4158630817.csv  lidar_4158630918.csv  lidar_4158631019.csv  lidar_4158631120.csv  lidar_4158631221.csv  lidar_4158631321.csv  lidar_4158631421.csv  lidar_4158640964.csv  lidar_4158650420.csv  lidar_4158650521.csv  lidar_4158650622.csv  lidar_4158650722.csv  lidar_4158650822.csv  lidar_4158650922.csv  lidar_4158651022.csv  lidar_4158651122.csv  lidar_4158651223.csv  lidar_4158651323.csv  lidar_4158651425.csv  lidar_4158651525.csv  lidar_4158651624.csv  lidar_4158651725.csv  lidar_4158651827.csv  lidar_4158651928.csv  lidar_4158652029.csv  lidar_4158652130.csv  lidar_4158652230.csv  lidar_4158652331.csv  lidar_4158652431.csv  lidar_4158652536.csv  lidar_4158652632.csv  lidar_4158652732.csv  (+34 more)
path_planning/: CMakeLists.txt  InteractivePathPlanner.cpp  PathPlanner.cpp  maincp.cpp
scans/: Range.txt_20250710_081923.txt  Range.txt_20250710_081924.txt  Range.txt_20250710_081925.txt  Range.txt_20250710_081926.txt  Range.txt_20250710_081927.txt  Range.txt_20250710_081928.txt  Range.txt_20250710_081929.txt  Range.txt_20250710_081930.txt  Range.txt_20250710_081931.txt  Range.txt_20250710_081932.txt  Range.txt_20250710_081933.txt  Range.txt_20250710_081934.txt  Range.txt_20250710_081935.txt  Range.txt_20250710_081936.txt  Range.txt_20250710_081937.txt  Range.txt_20250710_081938.txt  Range.txt_20250710_081939.txt  Range.txt_20250710_081940.txt  Range.txt_20250710_081941.txt  Range.txt_20250710_081942.txt  Range.txt_20250710_081943.txt  Range.txt_20250710_081944.txt  Range.txt_20250710_081945.txt  Range.txt_20250710_081946.txt  Range.txt_20250710_081947.txt  Range.txt_20250710_081948.txt  Range.txt_20250710_081949.txt  Range.txt_20250710_081950.txt  Range.txt_20250710_081951.txt  Range.txt_20250710_081952.txt  Range.txt_20250710_081953.txt  Range.txt_20250710_081954.txt  Range.txt_20250710_081955.txt  Range.txt_20250710_081956.txt  Range.txt_20250710_081957.txt  Range.txt_20250710_081958.txt  Range.txt_20250710_081959.txt  Range.txt_20250710_082000.txt  Range.txt_20250710_082001.txt  Range.txt_20250710_082002.txt  (+105 more)
src/: ekf.cpp  kalman_filter.cpp  lidar_handler.cpp  main.cpp  main_ekf.cpp  occupancy_grid.cpp  serial_com.cpp  serial_parser.cpp  test_ekf_simple.cpp  test_ekf_synthetic.cpp  udp_receiver.cpp  utils.cpp
src/communication/: udp_com.cpp
src/lidar/: LakiBeamUDP.cpp  lidar_handler.cpp
src/localization/: RobotLocalization.cpp  SensorFusion.cpp  pose_localiser.cpp  robot_integration_examples.cpp  test_ekf.cpp  test_ekf_real_robot.cpp
src/mapping/: occupancy_grid.cpp
tools/: usb_power_cycle
utils/: final.py  interface.py  udp.py
